Added Model of Emotions

--- a/DBTApp/Server.cshtml
+++ b/DBTApp/Server.cshtml
@@ -146,6 +146,7 @@
         SAS_notes = Azure.GetTableSASForUser(UserID, "notes", true, true, false, false),
         SAS_calendar = Azure.GetTableSASForUser(UserID, "calendar", true, true, false, false),
         SAS_diarycards = Azure.GetTableSASForUser(UserID, "diarycards", true, true, false, false),
+        SAS_modelsofemotions = Azure.GetTableSASForUser(UserID, "modelsofemotions", true, true, false, false),
         SAS_logs = Azure.GetTableSASForUser(UserID, "logs", false, true, false, false)
     }));
 }
